<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Manager</string>

    <string name="added_clipboard">Added to clipboard</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_access">Cannot access directory</string>
    <string name="confirm_delete">Are you sure you want to delete the selected file(s)?</string>
    <string name="confirm_paste">Are you sure you want to paste the file(s) here? Old files with the same name will be overwritten.</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="default_filename">New File.txt</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete file(s)</string>
    <string name="deleted">Deleted</string>
    <string name="directory_created">Directory created</string>
    <string name="file_created">File created</string>
    <string name="general_preferences">General Preferences</string>
    <string name="new_directory">New Folder</string>
    <string name="new_file">New File</string>
    <string name="no_activity">There is no app installed to open files of type</string>
    <string name="no">No</string>
    <string name="not_mounted">External storage is not mounted or does not have read/write access</string>
    <string name="ok">Okay</string>
    <string name="open_as_text">Open as a plain text file?</string>
    <string name="paste">Paste</string>
    <string name="paste_file">Paste file(s)</string>
    <string name="pasted">Pasted</string>
    <string name="rename">Rename</string>
    <string name="rename_fail">Rename failed</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_success">Successfully renamed</string>
    <string name="select_all">Select all</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="show_hidden">Show hidden</string>
    <string name="show_hidden_summary">Display or hide hidden files and folders</string>
    <string name="show_inaccessible">Show inaccessible folders</string>
    <string name="show_inaccessible_summary">Display or hide restricted folders</string>
    <string name="sort_folder_first">Sort folders first</string>
    <string name="sort_folder_first_summary">Put folders at the top</string>
    <string name="sort_uppercase_first">Sort uppercase first</string>
    <string name="sort_uppercase_first_summary">Sort uppercase and lowercase names separately</string>
    <string name="sorting_preferences">Sorting Preferences</string>
    <string name="unknown_alert_title">Unknown file type</string>
    <string name="up_one_level">..</string>
    <string name="yes">Yes</string>
</resources>
